deploy/kubernetes/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: idaten
spec:
  redirectScheme:
    permanent: true
    scheme: https
