deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idaten-http
  namespace: idaten
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: idaten-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: idaten.keykomi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idaten-backend
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idaten-https
  namespace: idaten
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - idaten.keykomi.com
      secretName: idaten-keykomi-com-tls
  rules:
    - host: idaten.keykomi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idaten-backend
                port:
                  name: http
